fix: mrp模块Controller使用VO+@Validated