@@ -1,6 +1,7 @@
 package com.aimrp.mrp.api.controller;
 
 import com.aimrp.common.result.ApiResponse;
+import com.aimrp.mrp.api.dto.MrpRunRequest;
 import com.aimrp.mrp.application.service.MrpApplicationService;
 import com.aimrp.mrp.domain.entity.MrpRun;
 import com.aimrp.mrp.domain.entity.MrpSuggestion;
@@ -8,13 +9,13 @@ import com.aimrp.mrp.domain.valueobject.MrpResult;
 import com.aimrp.mrp.infrastructure.persistence.mapper.MrpRunMapper;
 import com.aimrp.mrp.infrastructure.persistence.mapper.MrpSuggestionMapper;
 import lombok.RequiredArgsConstructor;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * MRP 计算 Controller
@@ -28,22 +29,22 @@ public class MrpController {
     private final MrpRunMapper mrpRunMapper;
     private final MrpSuggestionMapper mrpSuggestionMapper;
     
-    /**
-     * 执行 MRP 计算
+    MRP 计算
      */
-    @PostMapping("/run")
-    public ApiResponse<MrpResult> runMrp(@RequestBody(required = false) Map<String, Object> params) {
+    @ /**
+     * 执行PostMapping("/run")
+    public ApiResponse<MrpResult> runMrp(@Validated @RequestBody(required = false) MrpRunRequest request) {
         MrpRun mrpRun = new MrpRun();
         
-        if (params != null) {
-            if (params.containsKey("runType")) {
-                mrpRun.setRunType((String) params.get("runType"));
+        if (request != null) {
+            if (request.getRunType() != null) {
+                mrpRun.setRunType(request.getRunType());
             }
-            if (params.containsKey("planStartDate")) {
-                mrpRun.setPlanStartDate(LocalDate.parse((String) params.get("planStartDate")));
+            if (request.getPlanStartDate() != null) {
+                mrpRun.setPlanStartDate(request.getPlanStartDate());
             }
-            if (params.containsKey("planEndDate")) {
-                mrpRun.setPlanEndDate(LocalDate.parse((String) params.get("planEndDate")));
+            if (request.getPlanEndDate() != null) {
+                mrpRun.setPlanEndDate(request.getPlanEndDate());
             }
         }
         
@@ -67,17 +68,12 @@ public class MrpController {
         result.put("runId", runRecord.getId());
         result.put("runNo", runRecord.getRunNo());
         result.put("status", runRecord.getStatus());
-        result.put("run.getRunType());
-Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate());
+        result.put("runType", runRecord.getRunType());
+        result.put("planStartDate", runRecord.getPlanStartDate());
         result.put("planEndDate", runRecord.getPlanEndDate());
         result.put("itemCount", runRecord.getItemCount());
         result.put("demandCount", runRecord.getDemandCount());
         result.put("suggestionCount", runRecord.getSuggestionCount());
-        result.put("purchaseSuggestionCount", runRecord.getPurchaseSuggestionCount());
-        result.put("productionSuggestionCount", runRecord.getProductionSuggestionCount());
-        result.put("runTimeMs", runRecord.getRunTimeMs());
-        result.put("errorMessage", runRecord.getErrorMessage());
-        result.put("createdAt", runRecord.getCreatedAt());
         
         return ApiResponse.ok(result);
     }
@@ -101,41 +97,22 @@ Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate()
      */
     @GetMapping("/parameters")
     public ApiResponse<Map<String, Object>> getParameters() {
-        // 从数据库查询最新参数配置
         MrpRun lastRun = mrpRunMapper.selectLastRun();
         
         Map<String, Object> params = new HashMap<>();
+        params.put("planningHorizon", 90);
         
         if (lastRun != null) {
-            params.put("planningHorizon", 90);
             params.put("planStartDate", lastRun.getPlanStartDate());
             params.put("planEndDate", lastRun.getPlanEndDate());
-            params.put("allowNegative", false);
-            params.put("timeBucket", "DAY");
             params.put("runType", lastRun.getRunType());
         } else {
-            params.put("planningHorizon", 90);
             params.put("planStartDate", LocalDate.now());
             params.put("planEndDate", LocalDate.now().plusDays(90));
-            params.put("allowNegative", false);
-            params.put("timeBucket", "DAY");
             params.put("runType", "MANUAL");
         }
         
         return ApiResponse.ok(params);
-    }
-    
-    /**
-     * 更新 MRP 参数
-     */
-    @PutMapping("/parameters")
-    public ApiResponse<Void> updateParameters(@RequestBody Map<String, Object> params) {
-        // 参数验证
-        if (params.containsKey("planningHorizon")) {
-            // 保存到配置表或缓存
-        }
-        
-        return ApiResponse.ok();
     }
     
     /**
@@ -149,7 +126,6 @@ Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate()
             @RequestParam(defaultValue = "1") Integer pageNum,
             @RequestParam(defaultValue = "10") Integer pageSize) {
         
-        // 如果没有指定runId，获取最近一次运行的建议
         if (runId == null) {
             MrpRun lastRun = mrpRunMapper.selectLastRun();
             if (lastRun == null) {
@@ -171,7 +147,6 @@ Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate()
             suggestions = mrpSuggestionMapper.selectByRunId(runId);
         }
         
-        // 分页
         int total = suggestions.size();
         int fromIndex = (pageNum - 1) * pageSize;
         int toIndex = Math.min(fromIndex + pageSize, total);
@@ -183,8 +158,6 @@ Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate()
         Map<String, Object> result = new HashMap<>();
         result.put("suggestions", pageList);
         result.put("total", total);
-        result.put("pageNum", pageNum);
-        result.put("pageSize", pageSize);
         
         return ApiResponse.ok(result);
     }
@@ -201,17 +174,6 @@ Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate()
         } else {
             return ApiResponse.fail("建议不存在或已处理");
         }
-    }
-    
-    /**
-     * 批量确认建议
-     */
-    @PostMapping("/suggestions/batch/accept")
-    public ApiResponse<Void> acceptSuggestions(@RequestBody List<Long> ids) {
-        for (Long id : ids) {
-            mrpSuggestionMapper.updateStatus(id, "ACCEPTED", null);
-        }
-        return ApiResponse.ok();
     }
     
     /**
@@ -247,34 +209,15 @@ Type", runRecord        result.put("planStartDate", runRecord.getPlanStartDate()
             map.put("runNo", run.getRunNo());
             map.put("runType", run.getRunType());
             map.put("status", run.getStatus());
-            map.put("planStartDate", run.getPlanStartDate());
-            map.put("planEndDate", run.getPlanEndDate());
             map.put("suggestionCount", run.getSuggestionCount());
-            map.put("runTimeMs", run.getRunTimeMs());
             map.put("createdAt", run.getCreatedAt());
             return map;
-        }).collect(Collectors.toList());
+        }).toList();
         
         Map<String, Object> result = new HashMap<>();
         result.put("records", records);
         result.put("total", total);
-        result.put("pageNum", pageNum);
-        result.put("pageSize", pageSize);
         
         return ApiResponse.ok(result);
-    }
-    
-    /**
-     * 删除 MRP 运行记录
-     */
-    @DeleteMapping("/run/{runId}")
-    public ApiResponse<Void> deleteRun(@PathVariable Long runId) {
-        // 删除建议
-        mrpSuggestionMapper.deleteByRunId(runId);
-        
-        // 删除运行记录
-        mrpRunMapper.deleteById(runId);
-        
-        return ApiResponse.ok();
     }
 }
